--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -135,7 +135,7 @@
             </div>
             <div class="row d-flex justify-content-center mt-4">
                 <div class="col-lg-12">
-                    <div class="blog__details__text ml-4 mr-4">
+                    <div class="blog__details__text ml-4 mr-4 pb-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
                             <div class="row">
@@ -177,7 +177,7 @@
                 <div id="pré-parto">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
@@ -279,7 +279,7 @@
                 <div id="pos-parto">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
