--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -155,7 +155,7 @@
             </div>
             <div class="row d-flex justify-content-center mt-4">
                 <div class="col-lg-12">
-                    <div class="blog__details__text ml-4 mr-4">
+                    <div class="blog__details__text ml-4 mr-4 pb-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
                             <div class="row">
@@ -192,7 +192,7 @@
                 <div id="Cirurgia">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
@@ -293,7 +293,7 @@
                 <div id="anel">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
@@ -389,7 +389,7 @@
                 <div id="sutura-ferida">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
