--- a/pages/gravidez.html
+++ b/pages/gravidez.html
@@ -158,7 +158,7 @@
             <div class="flexivel">
                 <div id="header" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <p class="mt-4">A diabetes gestacional é uma patologia cada vez mais frequente.
@@ -221,7 +221,7 @@
                 </div>
                 <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <p class="mt-4">A diabetes gestacional é uma patologia cada vez mais frequente.
@@ -284,7 +284,7 @@
                 </div>
                 <div id="B" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <p class="mt-4"> O principal objetivo da terapia Snoezelen é melhorar o bem-estar
@@ -319,7 +319,7 @@
                 </div>
                 <div id="D" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -380,7 +380,7 @@
 
                 <div id="E" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
 
                                 <p class="">N’A Clínica temos noção que manter a atividade física durante a gravidez
