--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -159,7 +159,7 @@
             <div id="header">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <h5 class="mb-4"><b>Um hábito nutricional saudável é um presente que
@@ -286,7 +286,7 @@
             <div id="A">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <h5 class="mb-4"><b>Um hábito nutricional saudável é um presente que
@@ -413,7 +413,7 @@
             <div id="B">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -493,7 +493,7 @@
             <div id="D">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -571,7 +571,7 @@
             <div id="E">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
