--- a/pages/pediatria.html
+++ b/pages/pediatria.html
@@ -156,7 +156,7 @@
                 <div id="header">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <div class="section-title">
 
@@ -222,7 +222,7 @@
                 <div id="A">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
@@ -322,7 +322,7 @@
                 <div id="B">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <p class="mb-4">
@@ -451,7 +451,7 @@
                 <div id="C">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
@@ -547,7 +547,7 @@
                 <div id="D">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <p><i>N’A Clínica</i> sabemos que o sono infantil é um dos temas que mais dúvidas
                                         gera
@@ -654,7 +654,7 @@
                 <div id="E">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <div class="row">
