--- a/pages/vacinacao.html
+++ b/pages/vacinacao.html
@@ -157,7 +157,7 @@
             <div class="flexivel">
                 <div id="header" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <h5 class="mb-0 mt-4 "><b>A comodidade de ter um teste diagnóstico em sua casa é
@@ -174,7 +174,7 @@
                 </div>
                 <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item mt-4">
                                 <!-- Título da Seção -->
                                 <p>Durante a vida adulta necessitamos continuar a fazer vacinas de forma periódica de
@@ -219,7 +219,7 @@
                 </div>
                 <div id="B" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item mt-4">
                                 <!-- Título da Seção -->
                                 <p>A vacinação durante a gravidez e o aleitamento materno é segura e protege mãe e bebé
@@ -258,7 +258,7 @@
 
                 <div id="D" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
 
@@ -316,7 +316,7 @@
                 </div>
                 <div id="E" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <p>
