--- a/pages/Psicologia.html
+++ b/pages/Psicologia.html
@@ -157,7 +157,7 @@
                 <div id="header">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <div class="section-title">
 
@@ -213,7 +213,7 @@
                 <div id="A">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <p>
@@ -343,7 +343,7 @@
                 <div id="B">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <p class="mb-4">
@@ -454,7 +454,7 @@
                 <div id="C">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <p class="mb-4">Nestas consultas utilizamos métodos de avaliação psicológica
@@ -567,7 +567,7 @@
                 <div id="D">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <p>
                                         Nestas consultas utilizamos métodos de avaliação psicológica fidedignos para
@@ -671,7 +671,7 @@
                 <div id="E">
                     <div class="col-lg-8 col-md-8">
                         <div class="row">
-                            <div class="blog__details__text ml-4 mr-4">
+                            <div class="blog__details__text ml-4 mr-4 pb-4">
                                 <div class="blog__details__text__item">
                                     <!-- Título da Seção -->
                                     <p class="mb-4">
