--- a/pages/cirurgia.html
+++ b/pages/cirurgia.html
@@ -119,7 +119,7 @@
             </div>
             <div class="row d-flex justify-content-center mt-4">
                 <div class="col-lg-12">
-                    <div class="blog__details__text ml-4 mr-4">
+                    <div class="blog__details__text ml-4 mr-4 pb-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
                             <div class="row">
@@ -174,7 +174,7 @@
             <div class="d-flex">
                 <div id="Cirurgia" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -222,7 +222,7 @@
                 </div>
                 <div id="anel" class="col-lg-8 col-md-8" style="display: none;">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -256,7 +256,7 @@
 
                 <div id="sutura-ferida" class="col-lg-8 col-md-8" style="display: none;">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
