--- a/pages/domicilio.html
+++ b/pages/domicilio.html
@@ -153,7 +153,7 @@
             <div id="Cirurgia">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <p class="mb-4">A amamentação é uma maravilha mas pode ser muito desafiante. Para
@@ -212,7 +212,7 @@
             <div id="anel">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <p>O primeiro mês de um bebé é uma montanha russa de emoções e de mudanças na vida dos
                                     pais. Não se esqueça que cada vez
@@ -280,7 +280,7 @@
             <div id="sutura-ferida">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
