--- a/pages/terapia.html
+++ b/pages/terapia.html
@@ -162,7 +162,7 @@
             <div id="A">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -251,7 +251,7 @@
             <div id="B">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -361,7 +361,7 @@
             <div id="C">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <p>O pós-parto é um momento desafiante para toda a família. Requer adaptação do bebé
                                     recém-nascido ao mundo e dos pais ao seu novo papel. <br><br>
@@ -448,7 +448,7 @@
             <div id="D">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
 
@@ -541,7 +541,7 @@
             <div id="E">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <p>A abordagem terapêutica Snoezelen nasce na Holanda na década de 1970, combinando
                                     estimulação sensorial, estimulação
@@ -656,7 +656,7 @@
             <div id="F">
                 <div class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <p class="mb-4">O terapeuta ocupacional é o profissional de saúde especialista
