--- a/pages/teste.html
+++ b/pages/teste.html
@@ -148,7 +148,7 @@
             <div class="flexivel">
                 <div id="header" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="section-title">
                                     <h5 class="mb-0 mt-4 "><b>A comodidade de ter um teste diagnóstico em sua casa é
@@ -165,7 +165,7 @@
                 </div>
                 <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row">
@@ -257,7 +257,7 @@
                 </div>
                 <div id="B" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <!-- Título da Seção -->
                                 <div class="row mb-2">
@@ -317,7 +317,7 @@
 
                 <div id="D" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="row mb-2">
                                 <div class="col-lg-12">
                                     <div class="section-title">
@@ -372,7 +372,7 @@
                 </div>
                 <div id="E" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text ml-4 mr-4 pb-4">
                             <div class="blog__details__text__item">
                                 <div class="row mb-2">
                                     <div class="col-lg-12">
