--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -111,7 +111,7 @@
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-12">
-                    <div class="blog__details__text ml-4 mr-4">
+                    <div class="blog__details__text ml-4 mr-4 pb-4">
                         <div class="blog__details__text__item">
                             <!-- Título da Seção -->
                             <div class="row">
