--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                                 enquanto pais! <br><br>
                                 <b>Quando nasce um bebé, nasce uma mãe e um pai!</b> Nasce um amor incondicional, um
                                 carinho enorme e uma alegria maravilhosa!
-                                Nasce, também, uma culpa e uma preocupação que nos acompanham ao longo da vida. <br>
+                                Nasce, também, uma culpa e uma preocupação que nos acompanham ao longo da vida. <br><br>
                                 <b> <i>N’A Clínica</i> focamo-nos na unidade nuclear da nossa sociedade: a família!
                                 </b> Neste
                                 espaço
