--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -116,7 +116,7 @@
                 <div class="services__details__pic">
                     <img id="profile" alt="">
                     <div class="services__details__content">
-                        <div class="d-flex w-100 align-items-end">
+                        <div class="d-grid w-100 justify-items-center">
                             <div class="mr-3">
                                 <div class="services__details__title">
                                     <h3><img id="icone" class="fa " alt="">
@@ -286,7 +286,7 @@
             nome.textContent = "Dra. Patricia Pérez Ronquillo"; // Atualiza o texto para "Calisto Chemane"
             icone.src = "../img/icons/medica geral.png";
             paragrafo.innerHTML = "Médica Geral e a sua nova conselheira. Licenciada em Medicina na Universidade Carlos Juan Finlay em Cuba com menção de honra. Especialista Universitária em Pediatria, Diploma Universitário em Técnicas de Intervenção médica no tratamento psíquico infanto-juvenil e a realizar um Mestrado em Neonatologia pela Universidade Tecnológica Cardenal Herrera em Espanha.  Certificada em Primeiros Socorros Pediátricos: atualização 2024 pela Moz First Aid. </br></br> Toda a minha vida sonhei trabalhar com crianças e, agora que sou mãe de uma menina ainda dou mais valor à Pediatria e ao trabalho desenvolvido com as famílias. Descobri, também, a paixão pela amamentação materna, tema muito interessante do ponto de vista clínico e social.";
-            funcao.textContent = "Técnicas de Intervenção médica no tratamento psíquico infanto-juvenil";
+            funcao.textContent = "Médica Geral";
             frase.innerHTML = "<b>«Para amamentar é necessária uma rede de apoio forte. Quero que te sintas acompanhada nesta jornada!»</b>";
             profile.src = "../img/team/team-7.jpg";
             // Rolar para o topo suavemente
@@ -325,7 +325,7 @@
         function showH() {
             nome.textContent = "Dra Joana Costa"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Psicóloga Clínica";
-            icone.src = "../img/icons/Pscologa.png";
+            icone.src = "../img/icons/Pscologa-white.png";
             paragrafo.innerHTML = "Sou Psicóloga Clínica de formação, apaixonada pela mente humana em todas as suas facetas.  <br> Moçambicana e mãe de dois filhos lindos, desenvolvi um interesse especial pela intervenção psicológica na área materna, onde procuro contribuir para o bem-estar emocional e saúde mental das famílias num dos momentos mais marcantes das suas vidas. A Psicologia está presente em tudo o que faço, procuro aplicar este conhecimento para criar impacto positivo em todas as áreas da minha vida. Acredito que o acompanhamento psicológico pode ser transformador, promovendo uma vida mais equilibrada e saudável."
             frase.innerHTML = "<b>«A tua história é importante! Mereces atenção, amor, compreensão e bem-estar emocional. Estou aqui para ajudar-te enquanto percorres o teu caminho. »</b>";
             profile.src = "../img/team/team-11.jpg";
@@ -336,17 +336,16 @@
             nome.textContent = "Dra Marina Pastore"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Terapeuta Ocupacional";
             icone.src = "../img/icons/medica geral.png";
-            paragrafo.innerHTML = "Licenciada em Terapia Ocupacional pela Universidade de São Paulo (USP), Brasil. PhD e Mestra em Terapia Ocupacional pela Universidade Federal de São Carlos (UFSCar), Brasil. Especialização na Universidade do Porto em Psicologia Social e Ciências da Educação (UP), Portugal. Doutora em Antropologia da Criança, Brasil. <br> Mãe de um menino muito fofo e pequenino, e terapeuta ocupacional com mais de 12 anos de experiência em Moçambique. Autora do blog <i>“ser estrangeiromulungu”</i>, no qual relata as vivências e experiências com crianças e adolescentes em suas pesquisas de campo do Rovuma a Maputo. Autora também do livro “Brincar-brinquedo, criar-fazendo: entrelaçando pluriversos de infâncias e crianças ao sul de Moçambique”."
+            paragrafo.innerHTML = "Licenciada em Terapia Ocupacional pela Universidade de São Paulo (USP), Brasil. PhD e Mestra em Terapia Ocupacional pela Universidade Federal de São Carlos (UFSCar), Brasil.  Especialização na Universidade do Porto em Psicologia Social e Ciências da Educação(UP), Portugal.Doutora em Antropologia da Criança, Brasil. <br><br> Mãe de um menino muito fofo e pequenino, e terapeuta ocupacional com mais de 12 anos de experiência em Moçambique.Autora do blog <i>“ser estrangeiromulungu”</i>, no qual relata as vivências e experiências com crianças e adolescentes em suas pesquisas de campo do Rovuma a Maputo.Autora também do livro “Brincar - brinquedo, criar - fazendo: entrelaçando pluriversos de infâncias e crianças ao sul de Moçambique”."
             frase.innerHTML = "<b>«Ser Terapeuta Ocupacional é experenciar meu lado mais humano e afetuoso e, agora como mãe recente, é também dar a oportunidade de diversas formas de vida, em seus diferentes jeitos de ser, poderem habitar esse mundo e participar daquilo que temos de melhor: a vida.»</b>";
             profile.src = "../img/team/team-15.jpg";
-
             // Rolar para o topo suavemente
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
         function showJ() {
             nome.textContent = "Tânia Semende"; // Atualiza o texto para "Calisto Chemane"
             funcao.textContent = "Enfermeira especialista em saúde materno-infantil";
-            icone.src = "../img/icons/medica geral.png";
+            icone.src = "../img/icons/primeiros-socoros.png";
             paragrafo.innerHTML = "Enfermeira especialista em saúde materno-infantil desde 2019 pela Universidade de Lugenda. <br> A sua mãe faleceu de cancro do colo do útero, o que a levou a querer estudar enfermagem de forma a perceber as origens daquela doença e como poderia ajudar na luta contra esta doença terrível. <br> Durante o curso universitário de enfermagem apaixonou-se pelo atendimento às mães e crianças. O seu maior sonho é continuar a cuidar de crianças, apoiar e ajudar mães com toda a sua dedicação."
             frase.innerHTML = "<b>«A Enfermagem é uma profissão de amor e de dádiva aos demais!»</b>";
             profile.src = "../img/team/team-12.jpg";
@@ -368,8 +367,8 @@
         }
         function showL() {
             nome.textContent = "André Antunes"; // Atualiza o texto para "Calisto Chemane"
-            funcao.textContent = "Personal Trainer";
-            icone.src = "../img/icons/Exercício Fisico.png";
+            funcao.textContent = "PT";
+            icone.src = "../img/icons/Exercício Fisico white.png";
             paragrafo.innerHTML = "Com mais de 15 anos de experiência em Moçambique, Portugal e além-fronteiras, é um Personal Trainer pronto para elevar os seus treinos a novos patamares! <br> As suas certificações e especializações abrangem desde treino de força e condicionamento físico, treino específico para gestantes e pós-parto, população sénior, recomposição corporal, pós-lesão e atletas. <br> Descubra as inúmeras possibilidades do treino personalizado online e melhore a sua saúde e alcance os seus objetivos com um treino específico, tendo em conta a sua individualidade, capacidades e limitações, com toda a qualidade e segurança."
             frase.innerHTML = "<b>«Ajudo-te a alcançar os teus objectivos em termos físicos, um treino de cada vez!»</b>";
             profile.src = "../img/team/team-14.jpg";
