--- a/header.html
+++ b/header.html
@@ -286,7 +286,7 @@
 
                                         </ul>
                                         <br>
-                                        <span class="pt-4"><img src="../img/icons/viajante.png" alt="">Medicina do
+                                        <span class="pt-4"><img src="img/icons/viajante.png" alt="">Medicina do
                                             Viajante</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/viajante.html">Consulta</a></li>
