--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <div class="row">
                             <!-- Banner 1 -->
                             <div class="col banner-1" style="background-image: url('img/curso.jpg');">
-                                <a href="pages/curso-amamentacao-indiv.html">
+                                <a href="pages/curso-prep-indiv.html">
                                     <div class="banner-text subtitle">
                                         Curso de Preparação para o Parto.
                                     </div>
