--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
         }
 
         .consultation__video {
-            height: 550px;
-            width: 1200px;
+            height: 550px !important;
+            width: 1200px !important;
         }
 
         .employer {
@@ -184,8 +184,7 @@
                             <div class="row">
                                 <div class="col-lg-6 mt-2 ml-4">
                                     <div class="hero__text">
-                                        <h2>COMPREENDEMOS o papel fundamental da família e queremos fazer parte
-                                            da sua! <b>Somos a sua aldeia!</b></h2>
+
                                     </div>
                                 </div>
                             </div>
