--- a/pages/domicilio.html
+++ b/pages/domicilio.html
@@ -108,7 +108,7 @@
                                 <h4 class="text-white"><a id="doutora" href="team-sing.html#I">Dra Patrícia Pérez
                                         Ronquillo</a>
                                 </h4>
-                                <h5>Médica Geral</h5>
+                                <h5 id="prof">Médica Geral</h5>
                             </div>
                         </div>
                         <div class="d-flex w-100 mt-2 align-items-end justify-content-center text-white">
@@ -359,6 +359,7 @@
         // Obter os botões e asclassimg.src = " divs
         const CirurgiaBtn = document.getElementById('con-ciru');
         const anelBtn = document.getElementById('circ-anel');
+        const prof = document.getElementById('prof');
         const suturaBtn = document.getElementById('Sutura');
         const CirurgiaDiv = document.getElementById('Cirurgia');
         const anelDiv = document.getElementById('anel');
@@ -387,6 +388,7 @@
             CirurgiaDiv.style.display = 'none';
             doutora.textContent = "Enfermeira Tânia Semende";
             consultaText.textContent = "Enfermagem";
+            prof.textContent = "Enfermeira";
             subtitulo.textContent = "O cuidado do seu recém-nascido na comodidade da sua casa!";
             showe.style.display = 'block';
             hiden.style.display = 'none';
